Fixed back card text wrap

--- a/resources/sass/modules/_card-flip.scss
+++ b/resources/sass/modules/_card-flip.scss
@@ -29,11 +29,11 @@
     &--active {
       transform: rotateX(-180deg);
 
-      & .media__card-front {
+      & .card-flip__card-front {
         position: absolute;
       }
 
-      & .media__card-back {
+      & .card-flip__card-back {
         position: relative;
       }
     }
